---
config:
  theme: dark
  layout: dagre
---
classDiagram
    direction TB

    class User {
        +BigInteger id
        +String username
        +String email
        +String password_hash
        +String device_fingerprint
        +Boolean is_guest
        +DateTime created_at
    }

    class ScanBatch {
        +BigInteger id
        +BigInteger user_id
        +ProcessingStatus status
        +Text error_message
        +DateTime processing_start_at
        +DateTime processing_end_at
        +Integer processing_duration_ms
        +Integer total_seeds
        +Integer bad_seeds_count
        +Float avg_confidence_score
        +DateTime created_at
    }

    class ProcessingStatus {
        <<enumeration>>
        PENDING
        PROCESSING
        COMPLETED
        FAILED
    }

    User "1" --> "*" ScanBatch : owns
    ScanBatch --> ProcessingStatus : status
